# dnp-encoder-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  lcov.info
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  publish.yml
benches/: encode_decode.rs
examples/: all_in_one.rs  basic.rs  encode_into_no_alloc.rs  strict.rs  validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  validate.rs
src/: decode.rs  encode.rs  error.rs  hex.rs  lib.rs  main.rs  validate.rs
tests/: test_cli.rs  test_decode.rs  test_encode.rs  test_error.rs  test_validate.rs
tools/: compare_go.sh  gen_golden.rs
