[package]
name = "oi4-dnp-encoding-fuzz"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-alloc"] }

[dependencies.oi4-dnp-encoding]
path = ".."
features = ["std","alloc"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace]

